# spellforge-jam

./: .gitignore  CMakeLists.txt  README.md  a.out.js  a.out.wasm  cmake_build.sh  make_web.sh  shell.html
.cache/clangd/index/: entity.cpp.FDD00BD13FCDF920.idx  entity.hpp.B13532C761FECF10.idx  level.cpp.541FF39A104A9844.idx  level.h.0701E8DDDD5C19AC.idx  level.h.3AA522E0B347B5DD.idx  level.h.B05F8E6A6C98511F.idx  main.cpp.14C1D75726FE9D4F.idx  main.cpp.D6A9B3995082EEF2.idx  physics.cpp.1FBB76C821A592DD.idx  physics.h.D4D13449FE3D4BA5.idx  player.cpp.275D762A94C1FB57.idx  player.h.07CB993869E0C3BE.idx  player.h.98E56C18AC6DDC7D.idx  player.h.A6AD14904EA32B92.idx
src/: main.cpp  state.h
src/anims/: animations.cpp  animations.hpp
src/entity/: enemies.cpp  enemies.hpp  entity.cpp  entity.hpp
src/level/: level.cpp  level.h
src/physics/: physics.cpp  physics.h
src/player/: player.cpp  player.h  projectile.cpp  projectile.h
web_build/: index.html  index.js  index.wasm
